@@ -1,3 +1,10 @@
+Sun Aug 23 00:13:56 BST 2009  Colin Watson  <cjwatson@debian.org>
+
+	* manual/Makefile.am (noinst_DATA): Move $(MANUAL).dvi to ...
+	  (CLEANFILES): ... here.
+	  (install-data-hook): Stop installing the DVI version of the manual
+	  by default.
+
 Sun Aug 23 00:07:03 BST 2009  Colin Watson  <cjwatson@debian.org>
 
 	* configure.ac: Add --enable-automatic-create,
